--- Auto-Git Commit ---

--- a/Linux/cgroup/memcg/2. oom killer.md
+++ b/Linux/cgroup/memcg/2. oom killer.md
@@ -389,6 +389,9 @@ improve memcg oom killer robustness (提升memcg oom killer的健壮性)
 https://github.com/alibaba/cloud-kernel/commit/52e375fcb7a71d62566dc89764ce107e2f6af9ee#diff-8fa1dddd53606ceb933c5c6a12e714ed41e11d37a2b7bc48e91d15b54171d033
 
 
+
+每个mem_cgroup结构体引入了几个和memcg priority的变量
+
 ```diff
 @@ -252,6 +255,12 @@ struct mem_cgroup {
 	bool		oom_lock;
@@ -402,6 +405,15 @@ https://github.com/alibaba/cloud-kernel/commit/52e375fcb7a71d62566dc89764ce107e2
 
 	int	swappiness;
 ```
+
+原有逻辑也是调用kernel 的 `out_of_memory()`, 然后调用`select_bad_process`和`oom_kill_process`
+
+在原有逻辑中, `select_bad_process`阶段, 如果是memcg, 进行调用memcg自己的函数`mem_cgroup_scan_tasks`
+
+新方案, 如果是memcg或者`root_memcg_use_priority_oom()` root_memcg 使用
+
+
+
 
 
 
