--- Auto-Git Commit ---

--- a/Linux/cgroup/memcg/2. oom killer.md
+++ b/Linux/cgroup/memcg/2. oom killer.md
@@ -389,6 +389,12 @@ improve memcg oom killer robustness (提升memcg oom killer的健壮性)
 https://github.com/alibaba/cloud-kernel/commit/52e375fcb7a71d62566dc89764ce107e2f6af9ee#diff-8fa1dddd53606ceb933c5c6a12e714ed41e11d37a2b7bc48e91d15b54171d033
 
 
+在内存压力下，回收和oom会发生，在一个系统中存在多个cgroup的情况下，我们可能希望它们的一些内存或任务在回收和oom之后仍存在，而还有其他候选对象。
+
+@ memory.low和@ memory.min已在回收期间发生这种情况，此补丁引入了memcg优先级oom来满足oom中的上述要求。
+
+优先级是从0到12，数字越高优先级越高。 当oom发生时，它总是从低优先级的memcg中选择受害者。
+它既适用于memcg oom，也适用于全局oom，可通过@ memory.use_priority_oom启用/禁用；对于通过根memcg的@ memory.use_priority_oom进行全局缩放，默认情况下处于禁用状态。
 
 每个mem_cgroup结构体引入了几个和memcg priority的变量
 
@@ -410,7 +416,9 @@ https://github.com/alibaba/cloud-kernel/commit/52e375fcb7a71d62566dc89764ce107e2
 
 在原有逻辑中, `select_bad_process`阶段, 如果是memcg, 进行调用memcg自己的函数`mem_cgroup_scan_tasks`
 
-新方案, 如果是memcg或者`root_memcg_use_priority_oom()` root_memcg 使用
+新方案, 如果是memcg或者`root_memcg_use_priority_oom()` root_memcg 使用priority_oom, 则调用自己实现的`mem_cgroup_select_bad_process(oc);`
+
+如果使用`priority_oom`, 调用`mem_cgroup_select_victim_cgroup()`, 否则还是用之前的`mem_cgroup_scan_tasks`
 
 
 
