--- Auto-Git Commit ---

--- a/Linux/cgroup/memcg/2. oom killer.md
+++ b/Linux/cgroup/memcg/2. oom killer.md
@@ -420,12 +420,17 @@ https://github.com/alibaba/cloud-kernel/commit/52e375fcb7a71d62566dc89764ce107e2
 
 新方案, 如果oom_control是memcg或者`root_memcg_use_priority_oom()` root_memcg 使用priority_oom, 则调用自己实现的`mem_cgroup_select_bad_process(oc);`
 
-注: 所以可能在内存分配上下文(即非memcg的charge阶段), 可能也会调用到memcg的select bad process; 而在select中, 如果是内存page分配上下文, 则`memcg = root_mem_cgroup`;
+>注: 所以可能在内存分配上下文(即非memcg的charge阶段), 可能也会调用到memcg的select bad process; 
+> 而在select中, 如果是内存page分配上下文(oc->memcg为空), 则`memcg = root_mem_cgroup`;
 
-如果使用了`priority_oom`, 调用`mem_cgroup_select_victim_cgroup()`, 否则还是用之前的`mem_cgroup_scan_tasks`
+如果memcg(可能是当前memcg`<在charge上下文>`或root_memcg)使用了`priority_oom`, 先调用`mem_cgroup_select_victim_cgroup()`选择一个受害者memcgroup, 然后调用之前的`mem_cgroup_scan_tasks`从这个受害者memcgroup中扫描进程(以前方案只有在memcg charge上下文会发生, 所以只会当前memcg的扫描task)
 
-注: 新方案只要开启root_memcg的priority_oom都会调用mem_cgroup的scan_tasks方法? 是否合理
+>注: 
+>新方案只要开启root_memcg的priority_oom都会调用mem_cgroup的scan_tasks方法? 是否合理
+>如果当前memcg没有开启priority_oom, 则也不会根据priority选择mem_cgroup
 
+
+在`mem_cgroup_select_victim_cgroup()`中, 如果这个
 
 
 
