--- Auto-Git Commit ---

--- a/Linux/cgroup/memcg/2. oom killer.md
+++ b/Linux/cgroup/memcg/2. oom killer.md
@@ -430,7 +430,13 @@ https://github.com/alibaba/cloud-kernel/commit/52e375fcb7a71d62566dc89764ce107e2
 >如果当前memcg没有开启priority_oom, 则也不会根据priority选择mem_cgroup
 
 
-在`mem_cgroup_select_victim_cgroup()`中, 如果这个
+> task_struct->css_set->cgroup_subsys_state->cgroup
+
+在`mem_cgroup_select_victim_cgroup()`中, 
+1. 如果这个memcg没有hierarchy, 则返回当前memcg
+2. 获得memcg的subsystem(parent)
+3. 获得parent css的memcg(parent_memcg)
+4. 
 
 
 
