--- Auto-Git Commit ---

--- a/Linux/cgroup/memcg/2. oom killer.md
+++ b/Linux/cgroup/memcg/2. oom killer.md
@@ -436,7 +436,12 @@ https://github.com/alibaba/cloud-kernel/commit/52e375fcb7a71d62566dc89764ce107e2
 1. 如果这个memcg没有hierarchy, 则返回当前memcg
 2. 获得memcg的subsystem(parent)
 3. 获得parent css的memcg(parent_memcg)
-4. 
+4. while(parent)
+
+- 如果parent的task数目小于等于 其对应的memcg不可kill的task数目(num_oom_skip), 跳出循环
+- 受害者等于parent
+4. 遍历parent subsystem的children(子链表串)css
+        * 
 
 
 
