--- a/Linux/cgroup/memcg/2. oom killer.md
+++ b/Linux/cgroup/memcg/2. oom killer.md
@@ -440,8 +440,11 @@ https://github.com/alibaba/cloud-kernel/commit/52e375fcb7a71d62566dc89764ce107e2
 
 - 如果parent的task数目小于等于 其对应的memcg不可kill的task数目(num_oom_skip), 跳出循环
 - 受害者等于parent
-4. 遍历parent subsystem的children(子链表串)css
-        * 
+- chosen_priority = 12 + 1 (最高优先级+1)
+- 遍历parent subsystem的children(子链表串)css
+        - 如果子css的task数目小于等于 其对应的memcg不可kill的task数目(num_oom_skip), 下一个子css
+        - 子css的memcg的priority大于chosen_priority, 下一个子css
+        - 子css的memcg的priority小于chosen_priority, 子css优先级更低
 
 
 
