--- Auto-Git Commit ---

--- a/Linux/cgroup/memcg/2. oom killer.md
+++ b/Linux/cgroup/memcg/2. oom killer.md
@@ -396,7 +396,7 @@ https://github.com/alibaba/cloud-kernel/commit/52e375fcb7a71d62566dc89764ce107e2
 
 优先级是从0到12，数字越高优先级越高。 当oom发生时，它总是从低优先级的memcg中选择受害者。它既适用于memcg oom，也适用于全局oom，可以通过 `@memory.use_priority_oom` 启用/禁用，对于通过**根memcg**的 `@memory.use_priority_oom` 进行的全局缩放，默认情况下处于禁用状态。
 
-
+系统里面所有的进程都属于这个root memcg
 
 每个mem_cgroup结构体引入了几个和memcg priority的变量
 
@@ -427,6 +427,7 @@ https://github.com/alibaba/cloud-kernel/commit/52e375fcb7a71d62566dc89764ce107e2
 
 >注: 
 >新方案只要开启root_memcg的priority_oom都会调用mem_cgroup的scan_tasks方法? 是否合理
+
 >如果当前memcg没有开启priority_oom, 则也不会根据priority选择mem_cgroup
 
 
@@ -434,7 +435,7 @@ https://github.com/alibaba/cloud-kernel/commit/52e375fcb7a71d62566dc89764ce107e2
 
 在`mem_cgroup_select_victim_cgroup()`中, 
 1. 如果这个memcg没有hierarchy, 则返回当前memcg
-2. 获得memcg的subsystem(parent)
+2. 获得memcg的subsystem(parent), 这里的parent指的就是自己
 3. 获得parent css的memcg(parent_memcg)
 4. while(parent)
 
@@ -445,6 +446,9 @@ https://github.com/alibaba/cloud-kernel/commit/52e375fcb7a71d62566dc89764ce107e2
         - 如果子css的task数目小于等于 其对应的memcg不可kill的task数目(num_oom_skip), 下一个子css
         - 子css的memcg的priority大于chosen_priority, 下一个子css
         - 子css的memcg的priority小于chosen_priority, 子css优先级更低
+        - 子css的memcg的priority小于chosen_priority, 子css优先级更低, 遍历子css的子css
+        - 相等, 则判断子css的page counter和已经chosen的page counter对比, 子css更大, 则遍历子css的
+
 
 
 
