--- Auto-Git Commit ---

--- a/Linux/cgroup/memcg/2. oom killer.md
+++ b/Linux/cgroup/memcg/2. oom killer.md
@@ -396,7 +396,7 @@ https://github.com/alibaba/cloud-kernel/commit/52e375fcb7a71d62566dc89764ce107e2
 
 优先级是从0到12，数字越高优先级越高。 当oom发生时，它总是从低优先级的memcg中选择受害者。它既适用于memcg oom，也适用于全局oom，可以通过 `@memory.use_priority_oom` 启用/禁用，对于通过**根memcg**的 `@memory.use_priority_oom` 进行的全局缩放，默认情况下处于禁用状态。
 
-系统里面所有的进程都属于这个root memcg
+系统里面所有的进程都属于这个`root_mem_cgroup`
 
 每个mem_cgroup结构体引入了几个和memcg priority的变量
 
