--- Auto-Git Commit ---

--- a/Linux/cgroup/简要介绍/1. 概念和术语.md
+++ b/Linux/cgroup/简要介绍/1. 概念和术语.md
@@ -16,8 +16,8 @@ cgroup是一种机制, 用于**按层次结构组织进程**并以**可控**和*
 
 cgroup主要由两部分组成 - **核心**和**控制器**。
 
-* **cgroup核心**主要负责**按层次组织流程**。
-* **cgroup控制器**通常负责**沿层次结构分配特定类型的系统资源**，尽管有实用程序控制器可用于资源分配以外的目的。
+* **cgroup核心**主要负责**按层次组织流程**
+* **cgroup控制器**通常负责**沿层次结构分配特定类型的系统资源**，尽管有实用程序控制器可用于资源分配以外的目的
 
 cgroup形成树状结构，系统中的每个进程都属于一个cgroup。进程的所有线程都属于同一个cgroup。**创建**时，所有进程都放入**父进程当时所属的cgroup**中。可以将一个进程迁移到另一个cgroup。流程的迁移不会影响已经存在的后代流程。
 
