--- a/Linux/cgroup/简要介绍/2. cgroups v1.md
+++ b/Linux/cgroup/简要介绍/2. cgroups v1.md
@@ -33,11 +33,13 @@
 
 <!-- /code_chunk_output -->
 
-说起容器监控，首先会想到通过 Cadvisor, Docker stats 等多种方式获取容器的监控数据，并同时会想到容器通过 Cgroups 实现对容器中的资源进行限制。但是这些数据来自哪里，并且如何计算的？答案是 Cgroups。最近在写 docker 容器监控组件，在深入 Cadvisor 和 Docker stats 源码发现数据都来源于 Cgroups。了解之余，并对 Cgroups 做下笔记。
+说起容器监控，首先会想到通过 Cadvisor, Docker stats 等多种方式获取容器的监控数据，并同时会想到容器通过 Cgroups 实现对容器中的资源进行限制。但是这些数据来自哪里，并且如何计算的？答案是 Cgroups.
+
+最近在写 docker 容器监控组件，在深入 Cadvisor 和 Docker stats 源码发现数据都来源于 Cgroups. 了解之余，并对 Cgroups 做下笔记。
 
 # 1. Cgroups 介绍
 
-Cgroups 是 control groups 的缩写，是 Linux 内核提供的一种可以限制，记录，隔离进程组(process groups)所使用物理资源的机制。最初有 google 工程师提出，后来被整合进 Linux 的内核。
+Cgroups 是 control groups 的缩写，是 Linux 内核提供的一种可以限制，记录，隔离进程组(process groups)所使用物理资源的机制。最初由 google 工程师提出，后来被整合进 Linux 的内核。
 
 因此，Cgroups 为容器实现虚拟化提供了基本保证，是构建 Docker,LXC 等一系列虚拟化管理工具的基石。
 
