--- Auto-Git Commit ---

--- a/Linux/cgroup/简要介绍/2. cgroups v1.md
+++ b/Linux/cgroup/简要介绍/2. cgroups v1.md
@@ -60,7 +60,9 @@ Cgroups 主要由 task, cgroup, subsystem 及 hierarchy 构成。下面分别介
 
 ## 3.2. cgroup: 任务组
 
-* `cgroup`: Cgroups中的**资源控制**都以**cgroup为单位**实现的。cgroup表示按照某种**资源控制标准**划分而成的**任务组！！！**，包含**一个或多个subsystem子系统**。
+* `cgroup`: Cgroups中的**资源控制**都以**cgroup为单位**实现的。一个cgroup表示按照某种**资源控制标准**划分而成的**任务组！！！**，包含**一个或多个subsystem子系统**。
+
+一个cgroup用来将**一组任务**和**一个或多个subsystem子系统**的一组参数关联起来。
 
 **一个任务**可以加入**某个cgroup**，也可以从某个cgroup迁移到另外一个cgroup。
 
@@ -70,13 +72,17 @@ Cgroups 主要由 task, cgroup, subsystem 及 hierarchy 构成。下面分别介
 
 * `subsystem`: Cgroups中的subsystem就是一个**资源调度控制器**（`Resource Controller`）。`cpu controller`、`memory controller`等, 统一称为`cgroup controller`, **cgroup控制器**.
 
+**subsystem** 是一个模块，该模块利用cgroups提供的**任务分组工具**以特定方式处理任务组。
+
 subsystem = controller
 
 比如**CPU子系统**可以控制cgroup的**CPU时间分配**，**内存子系统**可以限制**cgroup内存使用量**。
 
 ## 3.4. hierarchy
 
-* `hierarchy`: hierarchy由**一系列cgroup！！！** 以一个**树状结构**排列而成, **每个hierarchy**通过绑定对应的**subsystem**进行**资源调度**。
+* `hierarchy`: hierarchy由**一系列cgroup！！！** 以一个**树状结构**排列而成, 这样系统中每个task都恰好位于hierarchy中的一个cgroup中, **每个hierarchy**通过绑定对应的**subsystem**进行**资源调度**。
+
+hierarchy是一组排列在树中的cgroup，这样系统中的每个任务都恰好位于层次结构中的cgroup中，并且是子系统的集合。 每个子系统都有特定于系统的状态，该状态附加到层次结构中的每个cgroup。 每个层次结构都有一个与之关联的cgroup虚拟文件系统的实例。
 
 这是一个整体概念, 树状结构(一个目录, 本身可以是一个挂载点, 也可以不是).
 
