--- Auto-Git Commit ---

--- a/Linux/cgroup/简要介绍/2. cgroups v1.md
+++ b/Linux/cgroup/简要介绍/2. cgroups v1.md
@@ -8,8 +8,8 @@
 - [3. Cgroups 组成](#3-cgroups-组成)
   - [3.1. task](#31-task)
   - [3.2. cgroup: 任务组](#32-cgroup-任务组)
-  - [3.3. subsystem/controller](#33-subsystemcontroller)
-  - [3.4. hierarchy](#34-hierarchy)
+  - [3.3. subsystem/controller: 资源控制](#33-subsystemcontroller-资源控制)
+  - [3.4. hierarchy: cgroup的集合和subsystem的集合](#34-hierarchy-cgroup的集合和subsystem的集合)
   - [3.5. 组件之间的关系](#35-组件之间的关系)
 - [4. Cgroups 使用](#4-cgroups-使用)
   - [4.1. 创建 Hierarchy](#41-创建-hierarchy)
@@ -60,17 +60,17 @@ Cgroups 主要由 task, cgroup, subsystem 及 hierarchy 构成。下面分别介
 
 ## 3.2. cgroup: 任务组
 
-* `cgroup`: Cgroups中的**资源控制**都以**cgroup为单位**实现的。一个cgroup表示按照某种**资源控制标准**划分而成的**任务组！！！**，包含**一个或多个subsystem子系统**。
+Cgroups中的**资源控制**都以**cgroup为单位**实现的。
 
-一个cgroup用来将**一组任务**和**一个或多个subsystem子系统**的一组参数关联起来。
+一个cgroup用来将**一组任务**和**一个或多个subsystem子系统**的一组参数关联起来。所以一个cgroup表示按照某种**资源控制标准**划分而成的**任务组！！！**，而资源控制标准即**一个或多个subsystem子系统**。
 
 **一个任务**可以加入**某个cgroup**，也可以从某个cgroup迁移到另外一个cgroup。
 
 从**使用的角度**看，**cgroup**就是一个**目录树**，目录中可以创建**子目录**，这些目录称为“**cgroup 目录**”，在一些场景中为了体现层级关系，还会称为“**cgroup 子目录**”。
 
-## 3.3. subsystem/controller
+## 3.3. subsystem/controller: 资源控制
 
-* `subsystem`: Cgroups中的subsystem就是一个**资源调度控制器**（`Resource Controller`）。`cpu controller`、`memory controller`等, 统一称为`cgroup controller`, **cgroup控制器**.
+`subsystem`: Cgroups中的subsystem就是一个**资源调度控制器**（`Resource Controller`）。`cpu controller`、`memory controller`等, 统一称为`cgroup controller`, **cgroup控制器**.
 
 **subsystem** 是一个模块，该模块利用cgroups提供的**任务分组工具**以特定方式处理任务组。
 
@@ -78,11 +78,15 @@ subsystem = controller
 
 比如**CPU子系统**可以控制cgroup的**CPU时间分配**，**内存子系统**可以限制**cgroup内存使用量**。
 
-## 3.4. hierarchy
+## 3.4. hierarchy: cgroup的集合和subsystem的集合
 
-* `hierarchy`: hierarchy由**一系列cgroup！！！** 以一个**树状结构**排列而成, 这样系统中每个task都恰好位于hierarchy中的一个cgroup中, **每个hierarchy**通过绑定对应的**subsystem**进行**资源调度**。
+`hierarchy`: hierarchy由**一系列cgroup！！！** 以一个**树状结构**排列而成, 这样系统中每个task都恰好位于hierarchy中的一个cgroup中; hierarchy也是**subsystem的集合**.
 
-hierarchy是一组排列在树中的cgroup，这样系统中的每个任务都恰好位于层次结构中的cgroup中，并且是子系统的集合。 每个子系统都有特定于系统的状态，该状态附加到层次结构中的每个cgroup。 每个层次结构都有一个与之关联的cgroup虚拟文件系统的实例。
+**每个hierarchy**通过绑定对应的**subsystem**进行**资源调度**。
+
+**每个subsystem**都有**特定于系统**(`system-specific`)的**状态**，该状态附加到hierarchy中的**每个cgroup**。 
+
+每个hierarchy都有一个与之关联的**cgroup虚拟文件系统**的实例。
 
 这是一个整体概念, 树状结构(一个目录, 本身可以是一个挂载点, 也可以不是).
 
