--- Auto-Git Commit ---

--- a/Linux/cgroup/简要介绍/3. cgroups v2.md
+++ b/Linux/cgroup/简要介绍/3. cgroups v2.md
@@ -57,10 +57,14 @@ mount -t cgroup2 none $MOUNT_POINT
 
 ```
 # mount -t cgroup2 none /data/cg_test/
+
 # ls /data/cg_test/
 cgroup.controllers      cgroup.procs            cgroup.threads         cpu.stat          memory.stat
 cgroup.max.depth        cgroup.stat             cpuset.cpus.effective  io.stat
 cgroup.max.descendants  cgroup.subtree_control  cpuset.mems.effective  memory.numa_stat
+
+# cat cg_test/cgroup.controllers
+cpuset cpu io memory hugetlb pids
 ```
 
 **一个 contoller 无法在 cgroups v1 和 v2 中同时使用**. 如果想在 cgroups v2 使用已经被 cgroups v1 使用的 controller，则需要先将其从 cgroups v1 中 umount 掉。
