--- Auto-Git Commit ---

--- a/Linux/cgroup/memcg/1. 分析.md
+++ b/Linux/cgroup/memcg/1. 分析.md
@@ -3,7 +3,7 @@
 
 ## 应用背景
 
-Cgroup的memory子系统，即memory cgroup(本文以下简称memcg)，提供了对系统中一组进程的内存行为的管理，从而对整个系统中对内存有不用需求的进程或应用程序区分管理，实现更有效的资源利用和隔离。
+Cgroup的memory子系统，即memory cgroup(本文以下简称memcg)，提供了对系统中**一组进程**的**内存行为**的管理，从而对整个系统中对内存有不用需求的进程或应用程序区分管理，实现更有效的资源利用和隔离。
 
 在实际业务场景中，为了防止一些应用程序对资源的滥用（可能因为应用本身的bug，如内存泄露），导致对同一主机上其他应用造成影响，我们往往希望可以控制应用程序的内存使用量，这是memcg提供的主要功能之一，当然它还可以做的更多。
 
