--- a/Linux/cgroup/memcg/2. oom killer.md
+++ b/Linux/cgroup/memcg/2. oom killer.md
@@ -188,8 +188,13 @@ out:
 
 至此第一版的memcg oom killer代码分析结束.
 
-# 4. 最新的方案
+跟全局oom一样，memcg的oom也分成`select_bad_process`和`oom_kill_process`两个过程:
 
+a. `select_bad_process`找出该memcg下最该被kill的进程（如果memcg设置了hierarchy，也会考虑子memcg下的进程）；
+
+b. oom_kill_process杀掉选中的进程及与其共用mm的进程（杀进程的目的是释放内存，所以当然要把mm的所有引用都干掉）；
+
+# 4. 最新的方案
 
 基于:
 
@@ -200,11 +205,7 @@ SUBLEVEL = 0
 EXTRAVERSION = -rc4
 ```
 
-跟全局oom一样，memcg的oom也分成select_bad_process和oom_kill_process两个过程:
 
-a. select_bad_process找出该memcg下最该被kill的进程（如果memcg设置了hierarchy，也会考虑子memcg下的进程）；
-
-b. oom_kill_process杀掉选中的进程及与其共用mm的进程（杀进程的目的是释放内存，所以当然要把mm的所有引用都干掉）；
 
 对于实现的代码细节，不同的版本代码演进较快，之前memcg中会直接调用内核的select_bad_process和oom_kill_process，
 
