--- a/Linux/cgroup/简要介绍/3. cgroups v2.md
+++ b/Linux/cgroup/简要介绍/3. cgroups v2.md
@@ -160,7 +160,7 @@ cgroups v2 的具体组织结构如下图所示
 
 # 8. cgroup.events file
 
-在 cgroups v2 的实现中，也对 **group empty** 时获取通知的机制进行了优化。
+在 cgroups v2 的实现中，也对 **group empty** 时获取**通知的机制**进行了优化。
 
 cgroups v1 使用 `release_agent` 和 `notify_on_release` 在 v2 中被移除。替代的是使用了 `cgroup.events` 文件。这是一个**只读**的文件，每行一个 key value 对，key 和 value 之间通过空格分割。
 
@@ -175,7 +175,7 @@ cgroups v1 使用 `release_agent` 和 `notify_on_release` 在 v2 中被移除。
 
 # 10. 后代 cgroups 数量限制
 
-在 cgroups v2 hierarchy 中还包含了两个用于查看和设置该 cgroups 下的后代 cgroups 数量的限制文件:
+在 cgroups v2 hierarchy 中还包含了两个用于查看和设置该 cgroups 下的**后代 cgroups 数量**的限制文件:
 
 * `cgroup.max.depth`(since Linux 4.14)
 
