--- a/Linux/cgroup/memcg/2. oom killer.md
+++ b/Linux/cgroup/memcg/2. oom killer.md
@@ -216,6 +216,37 @@ b. `oom_kill_process`杀掉选中的进程及与其共用mm的进程（杀进程
 
 
 
+```
+static bool mem_cgroup_out_of_memory(struct mem_cgroup *memcg, gfp_t gfp_mask,
+                                     int order)
+{
+        struct oom_control oc = {
+                .zonelist = NULL,
+                .nodemask = NULL,
+                .memcg = memcg,
+                .gfp_mask = gfp_mask,
+                .order = order,
+        };
+        bool ret = true;
+
+        if (mutex_lock_killable(&oom_lock))
+                return true;
+
+        if (mem_cgroup_margin(memcg) >= (1 << order))
+                goto unlock;
+
+        /*
+         * A few threads which were not waiting at mutex_lock_killable() can
+         * fail to bail out. Therefore, check again after holding oom_lock.
+         */
+        ret = should_force_charge() || out_of_memory(&oc);
+
+unlock:
+        mutex_unlock(&oom_lock);
+        return ret;
+}
+```
+
 
 
 在最新的3.10中，memcg实现了自己的select_bad_process，即在memcg的代码中自己来找到要杀死的进程。虽然函数调用不同，但是找到要杀死的进程的原理都是类似的，select的过程会给memcg（或及其子memcg）下的**每个进程打一个分**，得分最高者被选中。评分因素每个版本不尽相同，主要会考虑以下因素：
