--- Auto-Git Commit ---

--- a/Linux/cgroup/memcg/2. oom killer.md
+++ b/Linux/cgroup/memcg/2. oom killer.md
@@ -216,7 +216,8 @@ b. `oom_kill_process`杀掉选中的进程及与其共用mm的进程（杀进程
 
 
 
-```
+```cpp
+// mm/memcontrol.c
 static bool mem_cgroup_out_of_memory(struct mem_cgroup *memcg, gfp_t gfp_mask,
                                      int order)
 {
@@ -228,10 +229,10 @@ static bool mem_cgroup_out_of_memory(struct mem_cgroup *memcg, gfp_t gfp_mask,
                 .order = order,
         };
         bool ret = true;
-
+        // 锁
         if (mutex_lock_killable(&oom_lock))
                 return true;
-
+        // 
         if (mem_cgroup_margin(memcg) >= (1 << order))
                 goto unlock;
 
@@ -239,6 +240,8 @@ static bool mem_cgroup_out_of_memory(struct mem_cgroup *memcg, gfp_t gfp_mask,
          * A few threads which were not waiting at mutex_lock_killable() can
          * fail to bail out. Therefore, check again after holding oom_lock.
          */
+        // 一些没有正在等待mutex_lock_killable() 的线程可能失败而退出
+        // 因此，在持锁后再次检查
         ret = should_force_charge() || out_of_memory(&oc);
 
 unlock:
