--- a/Linux/cgroup/memcg/2. oom killer.md
+++ b/Linux/cgroup/memcg/2. oom killer.md
@@ -274,6 +274,49 @@ b. 可以通过`/proc/$pid/oom_score_adj`进行一些分值干预；
 c. 拥有 `CAP_SYS_ADMIN` 的root进程分值会被调低；
 
 
+```cpp
+static void select_bad_process(struct oom_control *oc)
+{
+        oc->chosen_points = LONG_MIN;
+        // 针对oc是memcg的处理
+        if (is_memcg_oom(oc))
+                // 扫描, 对于task的评估通过 oom_evaluate_task
+                mem_cgroup_scan_tasks(oc->memcg, oom_evaluate_task, oc);
+        else {
+                ......
+        }
+}
+```
+
+```cpp
+int mem_cgroup_scan_tasks(struct mem_cgroup *memcg,
+                          int (*fn)(struct task_struct *, void *), void *arg)
+{
+        struct mem_cgroup *iter;
+        int ret = 0;
+        // 如果是root memcg, oops
+        BUG_ON(memcg == root_mem_cgroup);
+        // 迭代这个memcg树下的所有cgroup
+        for_each_mem_cgroup_tree(iter, memcg) {
+                struct css_task_iter it;
+                struct task_struct *task;
+                // 初始化task的迭代
+                css_task_iter_start(&iter->css, CSS_TASK_ITER_PROCS, &it);
+                while (!ret && (task = css_task_iter_next(&it)))
+                        ret = fn(task, arg);
+                // 
+                css_task_iter_end(&it);
+                if (ret) {
+                        mem_cgroup_iter_break(memcg, iter);
+                        break;
+                }
+        }
+        return ret;
+}
+```
+
+
+
 kill 部分
 
 
