--- Auto-Git Commit ---

--- a/Linux/cgroup/简要介绍/3. cgroups v2.md
+++ b/Linux/cgroup/简要介绍/3. cgroups v2.md
@@ -67,6 +67,50 @@ cgroup.max.descendants  cgroup.subtree_control  cpuset.mems.effective  memory.nu
 cpuset cpu io memory hugetlb pids
 ```
 
+当试图再mount一个cgroup2时, 会发现, 其实两个一模一样, 只是挂载目录不同, 这也是unified hierarchy的体现
+
+```
+# mount -t cgroup2 none /data/cg_test2
+
+# mount | grep cgroup2
+none on /data/cg_test type cgroup2 (rw,relatime)
+none on /data/cg_test2 type cgroup2 (rw,relatime)
+
+# ll cg_test/
+total 0
+-r--r--r-- 1 root root 0 Jan 27 16:01 cgroup.controllers
+-rw-r--r-- 1 root root 0 Jan 27 16:01 cgroup.max.depth
+-rw-r--r-- 1 root root 0 Jan 27 16:01 cgroup.max.descendants
+-rw-r--r-- 1 root root 0 Jan 27 16:01 cgroup.procs
+-r--r--r-- 1 root root 0 Jan 27 16:01 cgroup.stat
+-rw-r--r-- 1 root root 0 Jan 27 16:14 cgroup.subtree_control
+-rw-r--r-- 1 root root 0 Jan 27 16:01 cgroup.threads
+-r--r--r-- 1 root root 0 Jan 27 16:01 cpuset.cpus.effective
+-r--r--r-- 1 root root 0 Jan 27 16:01 cpuset.mems.effective
+-r--r--r-- 1 root root 0 Jan 27 16:01 cpu.stat
+-r--r--r-- 1 root root 0 Jan 27 16:01 io.stat
+drwxr-xr-x 2 root root 0 Jan 27 16:14 mem_cg
+-r--r--r-- 1 root root 0 Jan 27 16:01 memory.numa_stat
+-r--r--r-- 1 root root 0 Jan 27 16:01 memory.stat
+
+# ll cg_test2/
+total 0
+-r--r--r-- 1 root root 0 Jan 27 16:01 cgroup.controllers
+-rw-r--r-- 1 root root 0 Jan 27 16:01 cgroup.max.depth
+-rw-r--r-- 1 root root 0 Jan 27 16:01 cgroup.max.descendants
+-rw-r--r-- 1 root root 0 Jan 27 16:01 cgroup.procs
+-r--r--r-- 1 root root 0 Jan 27 16:01 cgroup.stat
+-rw-r--r-- 1 root root 0 Jan 27 16:14 cgroup.subtree_control
+-rw-r--r-- 1 root root 0 Jan 27 16:01 cgroup.threads
+-r--r--r-- 1 root root 0 Jan 27 16:01 cpuset.cpus.effective
+-r--r--r-- 1 root root 0 Jan 27 16:01 cpuset.mems.effective
+-r--r--r-- 1 root root 0 Jan 27 16:01 cpu.stat
+-r--r--r-- 1 root root 0 Jan 27 16:01 io.stat
+drwxr-xr-x 2 root root 0 Jan 27 16:14 mem_cg
+-r--r--r-- 1 root root 0 Jan 27 16:01 memory.numa_stat
+-r--r--r-- 1 root root 0 Jan 27 16:01 memory.stat
+```
+
 **一个 contoller 无法在 cgroups v1 和 v2 中同时使用**. 如果想在 cgroups v2 使用已经被 cgroups v1 使用的 controller，则需要先将其从 cgroups v1 中 umount 掉。
 
 要注意的是，系统启动时，systemd **默认**使用 `cgroups v1`，并将**可以使用的 controller** mount 到`/sys/fs/cgroup`。如下:
@@ -152,7 +196,7 @@ cgroups v2 的具体组织结构如下图所示
 
 ![2020-12-16-16-35-53.png](./images/2020-12-16-16-35-53.png)
 
-注意看图中, `/sys/fs/cgroup`也是一个cgroup, 且是root cgroup
+注意看图中, `/sys/fs/cgroup`就是一个cgroup, 且是root cgroup
 
 # 7. “no internal processes” rule
 
