--- Auto-Git Commit ---

--- a/Linux/cgroup/简要介绍/3. cgroups v2.md
+++ b/Linux/cgroup/简要介绍/3. cgroups v2.md
@@ -17,7 +17,7 @@
 
 <!-- /code_chunk_output -->
 
-cgroups 为容器实现虚拟化提供了基础. 随着容器技术不断发展，`cgroups v1` 中管理 **controller** 变得复杂起来. cgroups v2 的出现**简化了 Hierarchy**，并在 kernel 4.5.0 版本成为正式特性。本文将从其产生的背景，相比 v1 具体有哪些变化等方面，对 cgroups v2 进行介绍.
+cgroups 为容器实现虚拟化提供了基础. 随着容器技术不断发展, `cgroups v1` 中管理 **controller** 变得复杂起来. cgroups v2 的出现**简化了 Hierarchy**，并在 kernel 4.5.0 版本成为正式特性。本文将从其产生的背景，相比 v1 具体有哪些变化等方面，对 cgroups v2 进行介绍.
 
 # 1. 背景
 
