--- a/Linux/cgroup/memcg/2. oom killer.md
+++ b/Linux/cgroup/memcg/2. oom killer.md
@@ -1,9 +1,9 @@
 
 # 1. OOM
 
-Oom的全称是out-of-memory，是内核在处理系统内存不足而又回收无果的情况下采取的一种措施，内核会经过选择杀死一些进程，以释放一些内存，满足当前内存申请的需求。
+OOM 的全称是`out-of-memory`, 是内核在处理系统内存不足而又回收无果的情况下采取的一种措施, 内核会经过选择杀死一些进程, 以释放一些内存, 满足当前内存申请的需求.
 
-所以oom是一种系统行为，对应到memcg的oom，其原理和动机跟全局oom是一样的，区别只在于对象的不同，**全局oom**的对象是**整个系统**中**所有进程**，而**memcg oom**只针对**memcg中的进程**（如果**使能了hierarchy**，还包括所有**子memcg中的进程**），这里的对象主要是指oom时内核选择从哪些进程中杀死一些进程，所以memcg的oom**只**可能杀死**属于该memcg的进程**。
+所以oom是一种系统行为，对应到memcg的oom，其原理和动机跟全局oom是一样的，区别只在于对象的不同，**全局oom**的对象是**整个系统**中**所有进程**，而**memcg oom**只针对**memcg中的进程**（如果**使能了hierarchy**，还包括所有**子memcg中的进程**），这里的对象主要是指oom时内核选择从哪些进程中杀死一些进程，所以memcg的oom**只**可能杀死**属于该memcg的进程**.
 
 # 2. 猜测
 
@@ -19,7 +19,7 @@ linux 内存管理中 oom killer 机制存在于分配内存的 `__alloc_pages_s
 
 Memory controller: OOM handling, c7ba5c9e8176704bfac0729875fa62798037584d, 2008-02-07, 08:42
 
-> oom(Out of memory)处理用于当cgroup超过其限制. 从超过限制的cgroup中拿到一个进程, 利用现有的oom逻辑kill掉这个进程.
+> oom处理用于当cgroup超过其限制. 从超过限制的cgroup中拿到一个进程, 利用现有的oom逻辑kill掉这个进程.
 
 ## 3.2. 代码分析
 
