--- Auto-Git Commit ---

--- a/Linux/cgroup/简要介绍/2. cgroups v1.md
+++ b/Linux/cgroup/简要介绍/2. cgroups v1.md
@@ -184,7 +184,7 @@ mkdir /data/cg_test/mem_test
 mount -t cgroup -o memory mem_test /data/cg_test/mem_test
 ```
 
-`-t cgroup`指定挂载类型, `-o`指定挂载的controller(可以有多个, 用`“,”`间隔), xxx可以是任意字符, name可以认为就是想要挂载的controller的名字(其实就是目录名)
+`-t cgroup`指定**挂载类型**, `-o`指定挂载的controller(可以有多个, 用`“,”`间隔), xxx可以是任意字符, name可以认为就是想要挂载的controller的名字(其实就是目录名)
 
 如果想要挂载所有的subsystem, 使用下面命令
 
@@ -254,8 +254,27 @@ memory.kmem.limit_in_bytes  memory.max_usage_in_bytes           memory.soft_limi
 在centos中, `/sys/fs/cgroup/`目录下就是当前系统**所有可用的subsystem**:
 
 ```bash
-# ls /sys/fs/cgroup
-blkio  cpu  cpu,cpuacct  cpuacct  cpuset  devices  freezer  hugetlb  memory  net_cls  oom  perf_event  pids  systemd
+# ls /sys/fs/cgroup/
+blkio  cpuacct      cpuset   freezer  memory   perf_event  systemd
+cpu    cpu,cpuacct  devices  hugetlb  net_cls  pids
+```
+
+而这些subsystem都是通过cgroup挂载类型挂载的
+
+```
+# mount | grep cgroup
+tmpfs on /sys/fs/cgroup type tmpfs (ro,nosuid,nodev,noexec,mode=755)
+cgroup on /sys/fs/cgroup/systemd type cgroup (rw,nosuid,nodev,noexec,relatime,xattr,release_agent=/usr/lib/systemd/systemd-cgroups-agent,name=systemd)
+cgroup on /sys/fs/cgroup/blkio type cgroup (rw,nosuid,nodev,noexec,relatime,blkio)
+cgroup on /sys/fs/cgroup/cpu,cpuacct type cgroup (rw,nosuid,nodev,noexec,relatime,cpu,cpuacct)
+cgroup on /sys/fs/cgroup/devices type cgroup (rw,nosuid,nodev,noexec,relatime,devices)
+cgroup on /sys/fs/cgroup/hugetlb type cgroup (rw,nosuid,nodev,noexec,relatime,hugetlb)
+cgroup on /sys/fs/cgroup/pids type cgroup (rw,nosuid,nodev,noexec,relatime,pids)
+cgroup on /sys/fs/cgroup/memory type cgroup (rw,nosuid,nodev,noexec,relatime,memory)
+cgroup on /sys/fs/cgroup/perf_event type cgroup (rw,nosuid,nodev,noexec,relatime,perf_event)
+cgroup on /sys/fs/cgroup/cpuset type cgroup (rw,nosuid,nodev,noexec,relatime,cpuset)
+cgroup on /sys/fs/cgroup/freezer type cgroup (rw,nosuid,nodev,noexec,relatime,freezer)
+cgroup on /sys/fs/cgroup/net_cls type cgroup (rw,nosuid,nodev,noexec,relatime,net_cls)
 ```
 
 不同的subsystem有不同的用法. 
