--- Auto-Git Commit ---

--- a/Linux/cgroup/简要介绍/2. cgroups v1.md
+++ b/Linux/cgroup/简要介绍/2. cgroups v1.md
@@ -141,7 +141,6 @@ yum install libcgroup
 
 hierarchy, 本身是一个**目录**, 也可以是一个**挂载点**
 
-
 ```bash
 mkdir $hierarchy
 
@@ -220,7 +219,7 @@ mount -t cgroup -o none,name=somename none /some/mount/point
 // 在hierarchy下创建controller目录
 # mkdir -p /data/cg_test/mem_test
 
-// 挂载controller
+// 挂载memory controller
 # mount -t cgroup -o memory mem_test /data/cg_test/mem_test
 
 // 查找mount point
