--- Auto-Git Commit ---

--- a/Linux/cgroup/简要介绍/2. cgroups v1.md
+++ b/Linux/cgroup/简要介绍/2. cgroups v1.md
@@ -208,7 +208,9 @@ mount -t cgroup -o none,name=somename none /some/mount/point
 
 >注: 这时就不需要自己手动创建的controller的目录
 
-在hierarchy所在目录下面就是这个 hierarchy 所有可用的subsystem.
+在 hierarchy 所在目录下面就是这个 hierarchy 所有可用的subsystem.
+
+注: 前面提到过一个subsystem不能挂载到不同 hierarchy, 所以挂载新的controller时建议先从旧的卸载掉
 
 例如:
 
@@ -277,6 +279,15 @@ cgroup on /sys/fs/cgroup/net_cls type cgroup (rw,nosuid,nodev,noexec,relatime,ne
 ```
 
 不同的subsystem有不同的用法. 
+
+前面提到过一个subsystem不能挂载到不同 hierarchy, 所以如果不卸载旧的controller, 那新挂载的内容和旧是相同
+
+```
+
+
+// 新挂载
+# mount -t cgroup -o memory mem_test /data/cg_test/mem_test
+```
 
 ## 4.3. 卸载cgroup controller
 
