--- Auto-Git Commit ---

--- a/Linux/cgroup/简要介绍/2. cgroups v1.md
+++ b/Linux/cgroup/简要介绍/2. cgroups v1.md
@@ -283,10 +283,42 @@ cgroup on /sys/fs/cgroup/net_cls type cgroup (rw,nosuid,nodev,noexec,relatime,ne
 前面提到过一个subsystem不能挂载到不同 hierarchy, 所以如果不卸载旧的controller, 那新挂载的内容和旧是相同
 
 ```
+// 旧的 controller
+# mount | grep memory
+cgroup on /sys/fs/cgroup/memory type cgroup (rw,nosuid,nodev,noexec,relatime,memory)
+// test 是我创建的
+# ls /sys/fs/cgroup/memory
+cgroup.clone_children           memory.kmem.tcp.max_usage_in_bytes  memory.soft_limit_in_bytes
+cgroup.event_control            memory.kmem.tcp.usage_in_bytes      memory.stat
+cgroup.procs                    memory.kmem.usage_in_bytes          memory.swappiness
+cgroup.sane_behavior            memory.limit_in_bytes               memory.usage_in_bytes
+init.scope                      memory.max_usage_in_bytes           memory.use_hierarchy
+memory.failcnt                  memory.memsw.failcnt                notify_on_release
+memory.force_empty              memory.memsw.limit_in_bytes         onion
+memory.kmem.failcnt             memory.memsw.max_usage_in_bytes     release_agent
+memory.kmem.limit_in_bytes      memory.memsw.usage_in_bytes         system.slice
+memory.kmem.max_usage_in_bytes  memory.move_charge_at_immigrate     tasks
+memory.kmem.slabinfo            memory.numa_stat                    test
+memory.kmem.tcp.failcnt         memory.oom_control                  user.slice
+memory.kmem.tcp.limit_in_bytes  memory.pressure_level
 
-
-// 新挂载
+// 不卸载旧的新挂载
 # mount -t cgroup -o memory mem_test /data/cg_test/mem_test
+// 可以看到内容是相同的
+# ls /data/cg_test/mem_test
+cgroup.clone_children           memory.kmem.tcp.max_usage_in_bytes  memory.soft_limit_in_bytes
+cgroup.event_control            memory.kmem.tcp.usage_in_bytes      memory.stat
+cgroup.procs                    memory.kmem.usage_in_bytes          memory.swappiness
+cgroup.sane_behavior            memory.limit_in_bytes               memory.usage_in_bytes
+init.scope                      memory.max_usage_in_bytes           memory.use_hierarchy
+memory.failcnt                  memory.memsw.failcnt                notify_on_release
+memory.force_empty              memory.memsw.limit_in_bytes         onion
+memory.kmem.failcnt             memory.memsw.max_usage_in_bytes     release_agent
+memory.kmem.limit_in_bytes      memory.memsw.usage_in_bytes         system.slice
+memory.kmem.max_usage_in_bytes  memory.move_charge_at_immigrate     tasks
+memory.kmem.slabinfo            memory.numa_stat                    test
+memory.kmem.tcp.failcnt         memory.oom_control                  user.slice
+memory.kmem.tcp.limit_in_bytes  memory.pressure_level
 ```
 
 ## 4.3. 卸载cgroup controller
