--- Auto-Git Commit ---

--- a/Linux/Community/1. 邮件列表.md
+++ b/Linux/Community/1. 邮件列表.md
@@ -7,6 +7,7 @@
 - [2. 订阅LKML的好处](#2-订阅lkml的好处)
 - [3. 有没有什么坏处](#3-有没有什么坏处)
 - [4. 怎么订阅](#4-怎么订阅)
+- [mail list achieve](#mail-list-achieve)
 - [5. 参考](#5-参考)
 
 <!-- /code_chunk_output -->
@@ -103,12 +104,16 @@ auth 25415058 subscribe linux-pm xxx@xxx.com
 
 注2：订阅邮箱尽量使用正常邮箱，比如工作邮箱。有些邮箱，如qq邮箱，可能会订阅失败。另外，一旦订阅成功，一定要及时查看、清理，否则会把邮箱撑爆。
 
-推荐的 mail list achieve
 
-1. https://lore.kernel.org/lists.html
-2. https://www.spinics.net/lists/
-3. 整体的kernel, 不细分: https://www.mail-archive.com/linux-kernel@vger.kernel.org/
-4. 整体的kernel, 不细分: https://lkml.org/lkml
+# mail list achieve
+
+推荐的有
+
+1. 有模块的: https://lore.kernel.org/lists.html
+2. 有模块的: https://www.spinics.net/lists/
+3. 官方的, 有模块的ml: https://patchwork.kernel.org/
+4. 整体的kernel, 不细分: https://www.mail-archive.com/linux-kernel@vger.kernel.org/
+5. 整体的kernel, 不细分: https://lkml.org/lkml
 
 # 5. 参考
 
