--- Auto-Git Commit ---

--- a/Linux/Community/1. 邮件列表.md
+++ b/Linux/Community/1. 邮件列表.md
@@ -7,8 +7,8 @@
 - [2. 订阅LKML的好处](#2-订阅lkml的好处)
 - [3. 有没有什么坏处](#3-有没有什么坏处)
 - [4. 怎么订阅](#4-怎么订阅)
-- [mail list achieve](#mail-list-achieve)
-- [5. 参考](#5-参考)
+- [5. mail list achieve](#5-mail-list-achieve)
+- [6. 参考](#6-参考)
 
 <!-- /code_chunk_output -->
 
@@ -105,7 +105,7 @@ auth 25415058 subscribe linux-pm xxx@xxx.com
 注2：订阅邮箱尽量使用正常邮箱，比如工作邮箱。有些邮箱，如qq邮箱，可能会订阅失败。另外，一旦订阅成功，一定要及时查看、清理，否则会把邮箱撑爆。
 
 
-# mail list achieve
+# 5. mail list achieve
 
 推荐的有
 
@@ -115,7 +115,7 @@ auth 25415058 subscribe linux-pm xxx@xxx.com
 4. 整体的kernel, 不细分: https://www.mail-archive.com/linux-kernel@vger.kernel.org/
 5. 整体的kernel, 不细分: https://lkml.org/lkml
 
-# 5. 参考
+# 6. 参考
 
 转发自蜗窝科技，www.wowotech.net, 文章链接 http://www.wowotech.net/linux_application/lkml.html
 
