--- Auto-Git Commit ---

--- a/Linux/Community/1. 邮件列表.md
+++ b/Linux/Community/1. 邮件列表.md
@@ -7,7 +7,7 @@
 - [2. 订阅LKML的好处](#2-订阅lkml的好处)
 - [3. 有没有什么坏处](#3-有没有什么坏处)
 - [4. 怎么订阅](#4-怎么订阅)
-- [5. mail list achieve](#5-mail-list-achieve)
+- [5. 归档的邮件列表](#5-归档的邮件列表)
 - [6. 参考](#6-参考)
 
 <!-- /code_chunk_output -->
@@ -105,7 +105,9 @@ auth 25415058 subscribe linux-pm xxx@xxx.com
 注2：订阅邮箱尽量使用正常邮箱，比如工作邮箱。有些邮箱，如qq邮箱，可能会订阅失败。另外，一旦订阅成功，一定要及时查看、清理，否则会把邮箱撑爆。
 
 
-# 5. mail list achieve
+# 5. 归档的邮件列表
+
+其实归档的很多.
 
 推荐的有
 
