--- Auto-Git Commit ---

--- a/Hided/Git/6. patch和diff.md
+++ b/Hided/Git/6. patch和diff.md
@@ -44,9 +44,13 @@ git apply --check 0001-minor-fix.patch
 
 4、应用patch
 
+带当前的用户名和邮箱的signoff信息
+
 ```
 git am -s < 0001-minor-fix.patch
 ```
+
+
 
 https://www.jianshu.com/p/300eea8b66cc
 
