--- Auto-Git Commit ---

--- a/Linux/Community/2. 给Linux内核提交Patch.md
+++ b/Linux/Community/2. 给Linux内核提交Patch.md
@@ -69,6 +69,17 @@ index 1bf949c43b76..f6ab3ccf698f 100644
 
 添加用户和Email配置，用于git send-email发送Patch。
 
+强烈建议使用命令行配置, 修改config文件可能会有格式错误
+
+```
+git config --global user.name "Haiwei Li"
+git config --global user.email lihaiwei.kernel@gmail.com
+git config --global sendemail.smtpserver smtp.gmail.com
+git config --global sendemail.smtpuser lihaiwei.kernel@gmail.com
+git config --global sendemail.smtpserverport 587
+git config --global sendemail.smtpencryption tls
+```
+
 这里使用Gmail邮箱服务，在Linux项目.git/config配置中添加如下内容：
 
 ```conf
