--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第5章 VM-Exit处理/3. 引发VM-exit的事件.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第5章 VM-Exit处理/3. 引发VM-exit的事件.md
@@ -4,4 +4,4 @@
 
 ![config](./images/2.png)
 
-注意: APIC\-access VM\-exit与APIC\-write Vm\-exit使用同一个VM\-exit原因码(44号). 其中由于TPP below threshold, EOI虚拟化, APIC\-write VM\-exit以及由"monitor trap flag"位而引起的VM\-exit属于trap类型, 也就是保存的guest RIP字段将指向下一条指令边界上.
+注意: `APIC-access VM-exit`与`APIC-write VM-exit`使用同一个VM\-exit原因码(44号). 其中由于TPP below threshold, EOI虚拟化, APIC\-write VM\-exit以及由"monitor trap flag"位而引起的VM\-exit属于trap类型, 也就是保存的guest RIP字段将指向下一条指令边界上.
