--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第5章 VM-Exit处理/0. 概述.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第5章 VM-Exit处理/0. 概述.md
@@ -1,5 +1,6 @@
-逻辑处理器在VMX non\-root operation模式的执行过程中, 由于尝试执行某些指令或遇到某些事件后被迫切换回VMX root operation模式, 这行为称为"VM\-Exit". 另外, 在SMM双重监控处理机制下, VMM还可以主动产生SMM VM\-exit行为.
 
-需要注意, 由于在VMX non\-root operation模式下被迫发生VM\-exit, guest软件并不知道自己何时发生过VM\-exit, 也不可能检测到自己何时发生过VM\-Exit. 处于安全目的, Intel保证guest没有任何途径能检测自己是否处于虚拟机环境中(VMX non\-root operation环境).
+逻辑处理器在`VMX non-root operation`模式的执行过程中, 由于尝试**执行某些指令**或遇到**某些事件**后被迫切换回VMX root operation模式, 这行为称为"`VM-Exit`". 另外, 在**SMM双重监控处理机制**下, VMM还可以主动产生`SMM VM-exit`行为.
 
-出于保护及虚拟化物理资源的目的, 在**non\-root环境**中尝试执行**某些涉及物理资源访问**的**指令**或**接收到某些事件时**会发生VM\-Exit. **部分指令**能无条件产生Vm\-Exit. **部分指令**由于**VMM(Virtual machine monitor)设置了触发条件(！！！**)而引发VM\-Exit.
+需要注意, 由于在`VMX non-root operation`模式下被迫发生`VM-exit`, guest软件并不知道自己何时发生过`VM-exit`, 也不可能检测到自己何时发生过`VM-Exit`. 处于安全目的, Intel保证guest没有任何途径能检测自己是否处于虚拟机环境中(`VMX non-root operation`环境).
+
+出于保护及虚拟化物理资源的目的, 在`non-root`环境**中尝试执行**某些涉及物理资源访问的**指令**或接收到**某些事件**时会发生`VM-Exit`. **部分指令**能无条件产生Vm\-Exit. **部分指令**由于**VMM(Virtual machine monitor)设置了触发条件(！！！**)而引发VM\-Exit.
