--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第5章 VM-Exit处理/0. 概述.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第5章 VM-Exit处理/0. 概述.md
@@ -3,4 +3,4 @@
 
 需要注意, 由于在`VMX non-root operation`模式下被迫发生`VM-exit`, guest软件并不知道自己何时发生过`VM-exit`, 也不可能检测到自己何时发生过`VM-Exit`. 处于安全目的, Intel保证guest没有任何途径能检测自己是否处于虚拟机环境中(`VMX non-root operation`环境).
 
-出于保护及虚拟化物理资源的目的, 在`non-root`环境**中尝试执行**某些涉及物理资源访问的**指令**或接收到**某些事件**时会发生`VM-Exit`. **部分指令**能无条件产生Vm\-Exit. **部分指令**由于**VMM(Virtual machine monitor)设置了触发条件(！！！**)而引发VM\-Exit.
+出于保护及虚拟化物理资源的目的, 在`non-root`环境中尝试**执行**某些涉及物理资源访问的**指令**或接收到**某些事件**时会发生`VM-Exit`. **部分指令**能**无条件**产生`VM-Exit`. **部分指令**由于**VMM(Virtual machine monitor)设置了触发条件(！！！**)而引发`VM-Exit`.
